<resources>
    <string name="app_name">鐵男聊天室</string>
    <string name="input_account">輸入帳號</string>
    <string name="input_password">輸入密碼</string>
    <string name="input_passwordConfirm">密碼確認</string>
    <string name="input_name">輸入暱稱</string>
    <string name="ironman_txt">城市鐵男</string>
    <string name="auto_login">自動登入</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>

    <string name="welcometxt">歡迎 ~ </string>
    <string name="announcement">──水球廣播──</string>
</resources>
