<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_background"
    tools:context="com.ood.waterball.webchattingroom.RegisterPage">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/inputFrame_register"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <EditText
            style="@style/myEditTextStyle"
            android:id="@+id/nameEd_register"
            android:hint="@string/input_name" />
        <EditText
            style="@style/myEditTextStyle"
            android:hint="@string/input_account"
            android:id="@+id/accountEd_register"
            android:layout_marginTop="14dp"/>
        <EditText
            style="@style/myEditTextStyle"
            android:hint="@string/input_password"
            android:id="@+id/passwordEd_register"
            android:layout_marginTop="14dp"
            android:inputType="textPassword" />
        <EditText
            style="@style/myEditTextStyle"
            android:hint="@string/input_passwordConfirm"
            android:id="@+id/pwConfirmEd_register"
            android:inputType="textPassword"
            android:layout_marginTop="14dp"/>

    </LinearLayout>

    <!--廣告文字-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputFrame_register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/register"
        android:onClick="registerFinishedOnClick"
        android:background="@drawable/my_whitebutton" />
</RelativeLayout>
