<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/mainColorBackground"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ood.waterball.webchattingroom.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/majorframe_main"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:textSize="40sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ironman_txt" />
        <EditText
            style="@style/myEditTextStyle"
            android:layout_marginTop="10dp"
            android:id="@+id/account_Ed_main"
            android:layout_gravity="center"
            android:hint="@string/input_account"/>
        <EditText
            style="@style/myEditTextStyle"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/password_Ed_main"
            android:hint="@string/input_password"
            android:inputType="textPassword" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/my_whitebutton"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:onClick="logInOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/my_whitebutton"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:onClick="registerOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/register"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login"
            android:layout_marginTop="15dp"
            android:id="@+id/autoLogIn_Main"
            android:layout_gravity="end"/>
    </LinearLayout>

</RelativeLayout>
